force-app/main/default/objects/Room__c/fields/Air_Condition__c.field-meta.xml
<CustomField>
    <fullName>Air_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Condition</label>
    <type>Checkbox</type>
</CustomField>