force-app/main/default/objects/Room__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is room ready to book</description>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>