force-app/main/default/objects/Room__c/fields/Jacuzzi__c.field-meta.xml
<CustomField>
    <fullName>Jacuzzi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jacuzzi</label>
    <type>Checkbox</type>
</CustomField>