force-app/main/default/objects/Room__c/fields/Max_Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Guests__c</fullName>
    <label>Max Number of Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>