force-app/main/default/objects/Room__c/fields/Mini_Bar__c.field-meta.xml
<CustomField>
    <fullName>Mini_Bar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mini Bar</label>
    <type>Checkbox</type>
</CustomField>