force-app/main/default/objects/Room__c/fields/occupied__c.field-meta.xml
<CustomField>
    <fullName>occupied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is room available at the moment</description>
    <label>Occupied</label>
    <type>Checkbox</type>
</CustomField>