force-app/main/default/objects/Room__c/fields/photo_url__c.field-meta.xml
<CustomField>
    <fullName>photo_url__c</fullName>
    <description>Photo stored in static resources url</description>
    <label>Photo</label>
    <type>Url</type>
</CustomField>