force-app/main/default/objects/Room__c/fields/service__c.field-meta.xml
<CustomField>
    <fullName>service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox - if room required service</description>
    <label>service</label>
    <type>Checkbox</type>
</CustomField>