force-app/main/default/objects/Room__c/fields/tv__c.field-meta.xml
<CustomField>
    <fullName>tv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TV</label>
    <type>Checkbox</type>
</CustomField>