force-app/main/default/objects/Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available__c</columns>
    <columns>occupied__c</columns>
    <columns>service__c</columns>
    <columns>Type__c</columns>
    <columns>Room_Number__c</columns>
    <columns>Hotel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>